--- a/SpingJPAExample/src/main/resources/application.properties
+++ b/SpingJPAExample/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8470
 # ===============================
  
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/dev
 spring.datasource.username=root
 spring.datasource.password=root
  
