--- a/SpringBootToggle/src/main/resources/application.properties
+++ b/SpringBootToggle/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-
-# togglz settings
 togglz.enabled=true
 togglz.console.enabled=true
 togglz.console.path=/togglz-console
 togglz.console.secured=false
+#To persist the toggle state:
+togglz.features-file=file://Users/rahulvaish/myRepositories/toggle/toggleFeatures.properties
 
-# togglz feature flags
-togglz.features.DISCOUNT_APPLIED.enabled=true
 management.endpoints.web.exposure.include=togglz
+
+# DEFAULT STATE OF FEATURE FLAG:
+togglz.features.DISCOUNT_APPLIED.enabled=true
+
