--- a/ServiceA/src/main/resources/application.yml
+++ b/ServiceA/src/main/resources/application.yml
@@ -1,29 +1,25 @@
-
+spring:
+  application.name: ServiceA
+  jackson.serialization.indent_output: true
 
 server:
   port: 8090
 
-
-#actuator configuration
 management:
-  health:
-    circuitbreakers:
-      enabled: true
-  endpoints:
-    web:
-      exposure:
-        include: health
-  endpoint:
-    health:
-      show-details: always
-
-#circuit breaker (R4J) configuration
+  endpoints.web.exposure.include:
+    - '*'
+  endpoint.health.show-details: always
+  health.circuitbreakers.enabled: true
 
 resilience4j:
-  ratelimiter:
-    instances:
-      serviceA:
-        registerHealthIndicator: false
-        limitForPeriod: 10
-        limitRefreshPeriod: 60s
-        timeoutDuration: 20s
+  circuitbreaker:
+    configs:
+      default:
+        registerHealthIndicator: true
+        failure-rate-threshold: 50
+        wait-duration-in-open-state: 5000ms
+        permitted-number-of-calls-in-half-open-state: 3
+        sliding-window-type: COUNT_BASED
+        sliding-window-size: 10
+
+
