--- a/SpringBootGraphQL/src/main/resources/application.properties
+++ b/SpringBootGraphQL/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+#If you want to change the default /graphql path
+#spring.graphql.path=/app
+
+
